Fix scrollbar on GridFooter and main QuickGrid component

--- a/src/components/QuickGrid/QuickGrid.scss
+++ b/src/components/QuickGrid/QuickGrid.scss
@@ -100,8 +100,14 @@ $drag-handle-width: 5px;
             white-space: nowrap;
             text-overflow: ellipsis;
             margin-left: 5px;
+            margin-bottom: 20px;
+            
         }
     }
+}
+
+.grid-component.no-scrollbar {
+    overflow: hidden !important;
 }
 
 .grid-component-header {
